# PROWL

./: .gitignore  README.md  pyproject.toml
experiments/: run_elaia_real_data.py  run_num_experiments.py  run_pac_owl_experiments.py
outputs/main/: lcb_summary.csv  manifest.json  summary_by_setting.csv
outputs/theory_check/: lcb_summary.csv  manifest.json  summary_by_setting.csv
outputs/theory_check_light/: lcb_summary.csv  raw_metrics.csv  summary_by_setting.csv
outputs/theory_check_light2/: lcb_summary.csv  manifest.json  raw_metrics.csv  summary_by_setting.csv
pac_owl/estimators/: __init__.py  owl.py  policy_tree.py  prowl.py  q_learning.py  rwl.py
pac_owl/simulation/: __init__.py  paper_scenarios.py
